--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <meta property="og:title" content="Heroverse — Superheroes Showcase" />
   <meta property="og:description" content="Dive into the Heroverse: origins, powers, weaknesses, allies, enemies, and stories." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://impulsible.github.io/hero" />
-  <meta property="og:image" content="images/heroverse.png" />
+  <meta property="og:url" content="https://impulsible.github.io/hero">
+  <meta property="og:image" content="images/heroverse.png">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
