--- a/news.html
+++ b/news.html
@@ -6,8 +6,20 @@
 
   <title>News — Heroverse</title>
   <meta name="description" content="Latest superhero movie announcements, comic releases, and fan theories across the Heroverse." />
-  <meta name="author" content="Your Name" />
-  <link rel="icon" href="favicon.ico" />
+  <meta name="author" content="Henry Osuagwu" />
+  
+   <!-- Favicon & PWA icons -->
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16.png">
+<link rel="icon" href="images/favicon.ico">
+<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+<link rel="manifest" href="manifest.json">
+
+
+<!-- pinned tabs -->
+<link rel="icon" type="image/png" sizes="192x192" href="images/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="images/android-chrome-512x512.png">
+
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
