--- a/news.html
+++ b/news.html
@@ -113,17 +113,17 @@
         <a href="about.html" class="px-3 py-2 rounded-lg hover:bg-white/10">About</a>
         <a href="contact.html" class="px-3 py-2 rounded-lg hover:bg-white/10">Contact</a>
 
-    <!-- Mobile drawer -->
+    <!-- Mobile nav drawer-->
     <nav id="mobileNav" class="md:hidden hidden border-t border-gold/20 bg-gradient-to-b from-[#0b0f19] via-[#0c1324] to-[#0b0f19]">
       <div class="max-w-7xl mx-auto px-4 py-3 grid grid-cols-2 gap-3 text-sm">
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="heroes.html">Hall of Heroes</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="villains.html">Rogues Gallery</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="teams.html">Teams</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="stories.html">Stories</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="rankings.html">Rankings</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="news.html">News</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="about.html">About</a>
-        <a class="rounded-lg p-3 border border-primary/30 bg-primary/15 hover:bg-primary/25 transition" href="contact.html">Contact</a>
+        <a class="rounded-lg p-3 border border-red-400/40 bg-red-500/15 hover:bg-red-500/25 transition" href="heroes.html">Hall of Heroes</a>
+        <a class="rounded-lg p-3 border border-purple-400/40 bg-purple-500/15 hover:bg-purple-500/25 transition" href="villains.html">Rogues Gallery</a>
+        <a class="rounded-lg p-3 border border-yellow-400/40 bg-yellow-500/20 text-white hover:bg-yellow-500/30 transition" href="teams.html">Teams</a>
+        <a class="rounded-lg p-3 border border-blue-400/40 bg-blue-500/15 hover:bg-blue-500/25 transition" href="stories.html">Stories</a>
+        <a class="rounded-lg p-3 border border-green-400/40 bg-green-500/15 hover:bg-green-500/25 transition" href="rankings.html">Rankings</a>
+        <a class="rounded-lg p-3 border border-pink-400/40 bg-pink-500/15 hover:bg-pink-500/25 transition" href="news.html">News</a>
+        <a class="rounded-lg p-3 border border-cyan-400/40 bg-cyan-500/15 hover:bg-cyan-500/25 transition" href="about.html">About</a>
+        <a class="rounded-lg p-3 border border-orange-400/40 bg-orange-500/15 hover:bg-orange-500/25 transition" href="contact.html">Contact</a>
       </div>
     </nav>
   </header>
