--- a/about.html
+++ b/about.html
@@ -334,7 +334,6 @@
 
 </section>
 
-
     <!-- DESIGN PRINCIPLES STRIPE -->
     <section class="py-10 sm:py-14 bg-gradient-to-r from-[#0f1320] via-[#12172a] to-[#0f1320] border-y border-white/10">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -361,18 +360,18 @@
 
     <!-- ORIGIN STORY / LONGFORM -->
     <section class="py-12 sm:py-16">
-      <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="font-display text-3xl text-gold text-center reveal">Origin Story</h2>
-        <p class="mt-4 text-white/85 leading-relaxed reveal">
-          Heroverse began as a weekend sketch: a single screen that answered <em>who</em>, <em>where</em>, and <em>why now</em> for any character.
-          It grew into a small toolkit of patterns — trading-card grids, quick-compare rows, and galleries with real zoom and pan —
-          tuned for readers who hop between eras and mediums.
-        </p>
-        <p class="mt-4 text-white/85 leading-relaxed reveal">
-          The goal isn’t to replace the stories. It’s to hand you the right thread so the next issue, film, or run hits harder.
-        </p>
-      </div>
-    </section>
+  <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="font-display text-3xl text-gold text-center reveal">Origin Story</h2>
+    <p class="mt-4 text-white/85 leading-relaxed reveal">
+      Heroverse began as a weekend sketch: a single screen that answered <em>who</em>, <em>where</em>, and <em>why now</em> for any character.
+      It grew into a small toolkit of patterns such as trading card grids, quick compare rows, and galleries with real zoom and pan, tuned for readers who hop between eras and mediums.
+    </p>
+    <p class="mt-4 text-white/85 leading-relaxed reveal">
+      The goal isn’t to replace the stories. It’s to hand you the right thread so the next issue, film, or run hits harder.
+    </p>
+  </div>
+</section>
+
 
     <!-- CREDITS (INLINE, NO BOXES) -->
     <section class="py-8 sm:py-10 border-t border-white/10">
@@ -514,7 +513,7 @@
 
   </main>
 
-  <!-- FOOTER (matched embellishment) -->
+  <!-- FOOTER -->
   <footer class="border-t border-white/10 py-8 text-center text-white/60">
     <p>© <span id="year"></span> Heroverse. All rights reserved.</p>
     <p>Last modified: <span id="lastModified"></span></p>
@@ -525,7 +524,7 @@
     </p>
   </footer>
 
-  <!-- SECRET GAUNTLET MODAL (kept) -->
+  <!-- SECRET GAUNTLET MODAL -->
   <div id="gauntlet" class="modal z-50">
     <div class="absolute inset-0 bg-black/75" data-close></div>
     <div class="relative max-w-xl mx-auto mt-16 bg-dark border border-white/10 rounded-3xl comic-shadow p-6">
