--- a/heroes.html
+++ b/heroes.html
@@ -362,51 +362,51 @@
     ]
   },
   'hulk': {
-    cover: 'images/heroes/hulk/1.webp',
+    cover: 'images/heroes/hulk/1.jpg',
     gallery: [
       'images/heroes/hulk/1.webp',
-      'images/heroes/hulk/2.jpg',
-      'images/heroes/hulk/3.jpg'
+      'images/heroes/hulk/2.webp',
+      'images/heroes/hulk/2.jpg'
     ]
   },
   'black-panther': {
-    cover: 'images/heroes/black-panther/1.webp',
+    cover: 'images/heroes/black-panther/1.jpg',
     gallery: [
       'images/heroes/black-panther/1.webp',
-      'images/heroes/black-panther/2.jpg',
+      'images/heroes/black-panther/1.avif',
       'images/heroes/black-panther/3.jpg'
     ]
   },
   'doctor-strange': {
-    cover: 'images/heroes/doctor-strange/1.webp',
+    cover: 'images/heroes/doctor-strange/3.jpg',
     gallery: [
-      'images/heroes/doctor-strange/1.webp',
       'images/heroes/doctor-strange/2.jpg',
-      'images/heroes/doctor-strange/3.jpg'
+      'images/heroes/doctor-strange/1.webp',
+      'images/heroes/doctor-strange/1.avif'
     ]
   },
   'scarlet-witch': {
     cover: 'images/heroes/scarlet-witch/1.webp',
     gallery: [
-      'images/heroes/scarlet-witch/1.webp',
-      'images/heroes/scarlet-witch/2.jpg',
-      'images/heroes/scarlet-witch/3.jpg'
+      'images/heroes/scarlet-witch/1.avif',
+      'images/heroes/scarlet-witch/2.avif',
+      'images/heroes/scarlet-witch/2.jpg'
     ]
   },
   'vision': {
-    cover: 'images/heroes/vision/1.webp',
+    cover: 'images/heroes/vision/1.jpg',
     gallery: [
-      'images/heroes/vision/1.webp',
+      'images/heroes/vision/1.avif',
       'images/heroes/vision/2.jpg',
       'images/heroes/vision/3.jpg'
     ]
   },
   'ant-man': {
-    cover: 'images/heroes/ant-man/1.webp',
+    cover: 'images/heroes/ant-man/2.webp',
     gallery: [
       'images/heroes/ant-man/1.webp',
-      'images/heroes/ant-man/2.jpg',
-      'images/heroes/ant-man/3.jpg'
+      'images/heroes/ant-man/1.jpg',
+      'images/heroes/ant-man/2.jpg'
     ]
   },
   'wasp': {
@@ -1054,11 +1054,11 @@
     ]
   },
   'aang': {
-    cover: 'images/heroes/aang/1.webp',
+    cover: 'images/heroes/aang/2.webp',
     gallery: [
-      'images/heroes/aang/1.webp',
-      'images/heroes/aang/2.jpg',
-      'images/heroes/aang/3.jpg'
+      'images/heroes/aang/3.webp',
+      'images/heroes/aang/1.jpg',
+      'images/heroes/aang/2.jpg'
     ]
   },
   'korra': {
