--- a/heroes.html
+++ b/heroes.html
@@ -410,7 +410,7 @@
     ]
   },
   'wasp': {
-    cover: 'images/heroes/wasp/1.webp',
+    cover: 'images/heroes/wasp/2.jpg',
     gallery: [
       'images/heroes/wasp/1.webp',
       'images/heroes/wasp/2.jpg',
@@ -418,10 +418,10 @@
     ]
   },
   'hawkeye': {
-    cover: 'images/heroes/hawkeye/1.webp',
+    cover: 'images/heroes/hawkeye/2.jpg',
     gallery: [
       'images/heroes/hawkeye/1.webp',
-      'images/heroes/hawkeye/2.jpg',
+      'images/heroes/hawkeye/1.jpg',
       'images/heroes/hawkeye/3.jpg'
     ]
   },
